Setup PHDS get endpoint. Needs Tested, and Fixed
