# cointrum-mainapi/src/utils/markets/types/ICandle.ts
@@ -1,11 +1,11 @@
 export default interface ICandle {
-    openTime: number;
+    openTime: Date;
     open: string;
     high: string;
     low: string;
     close: string;
     volume: string;
-    closeTime: number;
+    closeTime: Date;
     quoteVolume: string;
     trades: number;
     baseAssetVolume: string;
